--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <p id = "medium">Medium</p>
             <p id = "hard">Hard</p> -->
             <p id = "start">Start</p>
+            <p id = "stop">Stop</p>
         </div>
 
     </div>
@@ -71,5 +72,4 @@
 
 
 </body>
-
 </html>
