win conditions met

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" type = "text/css">
-
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <audio src="/sound/pop.mp3" id="pop"></audio>
+    <audio src="/sound/Explosion.mp3" id = "explosion"></audio>
 
     <script src="script.js"></script>
 
@@ -63,8 +64,8 @@
             <!-- <p id = "easy">Easy</p>
             <p id = "medium">Medium</p>
             <p id = "hard">Hard</p> -->
-            <p id = "start">Start</p>
-            <p id = "stop">Stop</p>
+            <p id="start">Start</p>
+            <p id="stop">Stop</p>
         </div>
 
     </div>
@@ -72,4 +73,5 @@
 
 
 </body>
+
 </html>
