--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <div class="container">
         <div id="gameGrid">
             <div class="row">
-                <img id="bomb bomb1" src="/imgs/bomb1.png" style="width:200px;height:200px;">
-                <img id="bomb bomb2" src="/imgs/bomb1.png" style="width:200px;height:200px;">
-                <img id="bomb bomb3" src="/imgs/bomb1.png" style="width:200px;height:200px;">
+                <img id="bomb bomb1" src="/imgs/bomb1.png" style="width:200px;height:200px;" onClick = "tap">
+                <img id="bomb bomb2" src="/imgs/bomb1.png" style="width:200px;height:200px;" onClick = "tap">
+                <img id="bomb bomb3" src="/imgs/bomb1.png" style="width:200px;height:200px;" onClick = "tap">
             </div>
             <div class="row">
                 <img id="bomb bomb4" src="/imgs/bomb1.png" style="width:200px;height:200px;">
