90% MVP, fixing currentscore/highscore

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
     <div class="container">
         <div id="gameGrid">
             <div class="row">
-                <img id="bomb bomb1" src="/imgs/bomb1.png" style="width:200px;height:200px;" onClick = "tap">
-                <img id="bomb bomb2" src="/imgs/bomb1.png" style="width:200px;height:200px;" onClick = "tap">
-                <img id="bomb bomb3" src="/imgs/bomb1.png" style="width:200px;height:200px;" onClick = "tap">
+                <img id="bomb bomb1" src="imgs/bomb1.png" style="width:200px;height:200px;">
+                <img id="bomb bomb2" src="imgs/bomb1.png" style="width:200px;height:200px;">
+                <img id="bomb bomb3" src="imgs/bomb1.png" style="width:200px;height:200px;">
             </div>
             <div class="row">
-                <img id="bomb bomb4" src="/imgs/bomb1.png" style="width:200px;height:200px;">
-                <img id="bomb bomb5" src="/imgs/bomb1.png" style="width:200px;height:200px;">
-                <img id="bomb bomb6" src="/imgs/bomb1.png" style="width:200px;height:200px;">
+                <img id="bomb bomb4" src="imgs/bomb1.png" style="width:200px;height:200px;">
+                <img id="bomb bomb5" src="imgs/bomb1.png" style="width:200px;height:200px;">
+                <img id="bomb bomb6" src="imgs/bomb1.png" style="width:200px;height:200px;">
             </div>
             <div class="row">
-                <img id="bomb bomb7" src="/imgs/bomb1.png" style="width:200px;height:200px;">
-                <img id="bomb bomb8" src="/imgs/bomb1.png" style="width:200px;height:200px;">
-                <img id="bomb bomb9" src="/imgs/bomb1.png" style="width:200px;height:200px;">
+                <img id="bomb bomb7" src="imgs/bomb1.png" style="width:200px;height:200px;">
+                <img id="bomb bomb8" src="imgs/bomb1.png" style="width:200px;height:200px;">
+                <img id="bomb bomb9" src= "imgs/bomb1.png" style="width:200px;height:200px;">
             </div>
         </div>
     </div>
