Fixed syntax for deployment (Audio/img sources)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <audio src="/sound/pop.mp3" id="pop"></audio>
-    <audio src="/sound/Explosion.mp3" id = "explosion"></audio>
+    <audio src="sound/pop.mp3" id="pop"></audio>
+    <audio src="sound/Explosion.mp3" id = "explosion"></audio>
 
     <script src="script.js"></script>
 
@@ -25,7 +25,7 @@
     <!-- High Score -->
     <div class="scoreBoard">
         <div class="row highScore">
-            <div>High Score: </div>
+            <div>High Score:</div>
             <div id="hsValue">0</div>
         </div>
         <div class="row">
@@ -65,7 +65,7 @@
             <p id = "medium">Medium</p>
             <p id = "hard">Hard</p> -->
             <p id="start">Start</p>
-            <p id="stop">Stop</p>
+            <p id="reset">Reset</p>
         </div>
 
     </div>
