Fixed modes and styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css">
     <audio src="sound/pop.mp3" id="pop"></audio>
-    <audio src="sound/Explosion.mp3" id = "explosion"></audio>
+    <audio src="sound/Explosion.mp3" id="explosion"></audio>
 
     <script src="script.js"></script>
 
@@ -51,7 +51,7 @@
             <div class="row">
                 <img id="bomb bomb7" src="imgs/bomb1.png" style="width:200px;height:200px;">
                 <img id="bomb bomb8" src="imgs/bomb1.png" style="width:200px;height:200px;">
-                <img id="bomb bomb9" src= "imgs/bomb1.png" style="width:200px;height:200px;">
+                <img id="bomb bomb9" src="imgs/bomb1.png" style="width:200px;height:200px;">
             </div>
         </div>
     </div>
@@ -61,9 +61,9 @@
     <!-- Modes and Restart/Start -->
     <div class="buttons">
         <div class="row">
-            <!-- <p id = "easy">Easy</p>
-            <p id = "medium">Medium</p>
-            <p id = "hard">Hard</p> -->
+            <p id="easy">Easy</p>
+            <p id="medium">Normal</p>
+            <p id="hard">Hard</p>
             <p id="start">Start</p>
             <p id="reset">Reset</p>
         </div>
